Agregamos la primer versión de la guia de polarimetria con sus imagenes.

--- a/Nivel2-B/Documentos/Guia/guia4.tex
+++ b/Nivel2-B/Documentos/Guia/guia4.tex
@@ -9,7 +9,6 @@ Para poder realizar descomposiciones polatrimétricas es necesario conservar la 
 \subsection{Calibración}
 Abra la imagen \path{ALPSRP278916070-L1.1.zip} que descargo del Alaska Satellite Facility.  Dirijase al menu \emph{Radar, Radiometric, Calibrate} (Figura \ref{fig:calibrar}). En este caso, tilde la opción \emph{Save as complex output} en \emph{Processing parameters}
 
-
 \begin{figure}[h!]
     \centering
     \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:calibrar1.png}}
@@ -71,3 +70,30 @@ Obtenga la descomposición de Pauli usando la herramienta \emph{Radar, Polarimet
     \caption{}
     \label{fig:pauli}
 \end{figure}
+
+Observe la descomposición de Pauli haciendo click derecho sobre la imagen obtenida y seleccionando la opción \emph{Open RGB image window} (Figura \ref{fig:pauli}).
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.7\textwidth]{fig:pauli.jpg}
+    \caption{}
+    \label{fig:pauli}
+\end{figure}
+
+\section{Actividades}
+
+\begin{que}
+    ¿De que color se ven las zonas urbanas en la descomposición de Pauli?
+\end{que}
+
+\begin{que}
+    ¿De que color se ven los bosques en la descomposición de Pauli?
+\end{que}
+
+\begin{que}
+    ¿De que color se ve el agua en la descomposición de Pauli?
+\end{que}
+
+\begin{que}
+    ¿De que color se ve la pista de aterrizaje en la descomposición de Pauli?
+\end{que}
