--- a/Nivel2-B/Documentos/Guia/preamble.tex
+++ b/Nivel2-B/Documentos/Guia/preamble.tex
@@ -57,6 +57,9 @@
 % Subfiguras
 \usepackage{subfig}
 
+% Menues y path
+\usepackage[os=win]{menukeys}
+\renewmenumacro{\directory}{pathswithfolder}
 \definecolor{A11}{HTML}{B2DF8A}
 \definecolor{A12}{HTML}{33A02C}
 \definecolor{A23}{HTML}{FDBF6F}
