--- a/Nivel2-B/Documentos/Guia/guia3.tex
+++ b/Nivel2-B/Documentos/Guia/guia3.tex
@@ -37,9 +37,9 @@ El producto descargado corresponde a una imagen \emph{Single look complex} en \e
 
 \section{Calibración}
 
-Abra la imagen \path{ALPSRP278916070-L1.1.zip} que descargo del Alaska Satellite Facility. Despliegue la banda \path{intensity_HH} y observe que se encuentra comprimida horizontalmente.
+Abra la imagen \directory{ALPSRP278916070-L1.1.zip} que descargo del Alaska Satellite Facility. Despliegue la banda \directory{intensity\_HH} y observe que se encuentra comprimida horizontalmente.
 
-Para calibrar la imagen, dirijase al menu \emph{Radar, Radiometric, Calibrate} (Figura \ref{fig:calibrar}).
+Para calibrar la imagen, dirijase al menu \menu{Radar>Radiometric>Calibrate} (Figura \ref{fig:calibrar}).
 
  \begin{figure}[h!]
      \centering
@@ -58,9 +58,9 @@ Para calibrar la imagen, dirijase al menu \emph{Radar, Radiometric, Calibrate} (
 
  \subsection{Multilooking}
 
- El proceso de multilooking genera una nueva imagen a partir de los pixeles en una ventana. Para realizarlo seleccione la herramienta \emph{Radar, Multilooking}.
+ El proceso de multilooking genera una nueva imagen a partir de los pixeles en una ventana. Para realizarlo seleccione la herramienta \menu{Radar>Multilooking}.
 
- Seleccione en source la imagen \path{ALOS-P1_1__A-ORBIT__ALPSRP278916070_Cal} que generó en el paso anterior. Es posible seleccionar en este caso el numero de looks y sobre que bandas se realizarán. Pongalo igual a 1. En caso de no seleccionar ninguna el proceso se aplicará sobre todas las bandas (Figura \ref{fig:multilook}).
+ Seleccione en source la imagen \directory{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal} que generó en el paso anterior. Es posible seleccionar en este caso el numero de looks y sobre que bandas se realizarán. Pongalo igual a 1. En caso de no seleccionar ninguna el proceso se aplicará sobre todas las bandas (Figura \ref{fig:multilook}).
 
 \begin{figure}[h!]
     \centering
@@ -78,7 +78,7 @@ Observe la banda \path{sigma_0_HH} de la imagen multilookeada.
 
 \subsection{Speckle filter}
 
-Existen otros filtros que ayudan a disminuir el ruido de la imagen. Uno de los más comunes es el filtro \emph{Lee Sigma}. Para aplicarlo a la imagen multilookeada vaya al menu \emph{Radar, Speckle Filter, Single Product Speckle Filter}.
+Existen otros filtros que ayudan a disminuir el ruido de la imagen. Uno de los más comunes es el filtro \menu{Lee Sigma}. Para aplicarlo a la imagen multilookeada vaya al menu \menu{Radar>Speckle Filter>Single Product Speckle Filter}.
 
 \begin{figure}[h!]
     \centering
@@ -89,25 +89,25 @@ Existen otros filtros que ayudan a disminuir el ruido de la imagen. Uno de los m
     \label{fig:lee}
 \end{figure}
 
-Seleccione en source la imagen \path{ALOS-P1_1__A-ORBIT__ALPSRP278916070_Cal_ML} que generó al aplicar el multilook. En processing parameter elija el filtro de \emph{Lee Sigma} con un numero de looks igual a 1 y una ventana de 7x7 (Figura \ref{fig:lee})
+Seleccione en source la imagen \directory{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal\_ML} que generó al aplicar el multilook. En processing parameter elija el filtro de \menu{Lee Sigma} con un numero de looks igual a 1 y una ventana de 7x7 (Figura \ref{fig:lee})
 
 
 
 \begin{que}
-    Observe y compare la banda \path{sigma_0_HH} de la imagen filtrada con la imagen multilookeada.
+    Observe y compare la banda \directory{sigma\_0\_HH} de la imagen filtrada con la imagen multilookeada.
 \end{que}
 
 \section{Proyección}
 
 Finalmente es es común proyectar la imagen del \emph{slant range} al \emph{ground range}. Esta imagen podrá después ser abierta en cualquier softwarae de GIS sin problemas. Para hacerlo existen dos opciones: proyectar la imagen sobre el elipsoide o sobre un modelo de elevación digital.
 
-Para el caso de las imágenes ALOS PALSAR 1, es necesario previamente aplicar un procesor antes de proyectarlas en el terreno. Este proceso se llama \emph{deskewing}. Para hacerlo vaya al menu \emph{Radar, Geometric, ALOS deskewing} y ejecute el proceso sobre la imagen \path{ALOS-P1_1__A-ORBIT__ALPSRP278916070_Cal_ML_Spk}.
+Para el caso de las imágenes ALOS PALSAR 1, es necesario previamente aplicar un procesor antes de proyectarlas en el terreno. Este proceso se llama \emph{deskewing}. Para hacerlo vaya al menu \menu{Radar>Geometric>ALOS deskewing} y ejecute el proceso sobre la imagen \directory{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal\_ML\_Spk}.
 
 \subsection{Elipsoide - GEC}
 
 Al proyectar la imagen sobre el elipsoide podremos hacerlo sobre cualquier lugar del planeta. Perderemos al hacerlo la información sobre el relieve local que es de importancia al momento de utilizar imagenes SAR.
 
-Para hacerlo, vaya al menú \emph{Radar, Geometric, Ellipsoid Correction, Average Height Range Doppler}. Seleccione la imagen \path{ALOS-P1_1__A-ORBIT__ALPSRP278916070_Cal_ML_Spk_DSk} y deje los parametros por defecto (Figura \ref{fig:elipsoide}).
+Para hacerlo, vaya al menú \menu{Radar>Geometric>Ellipsoid Correction>Average Height Range Doppler}. Seleccione la imagen \directory{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal\_ML\_Spk\_DSk} y deje los parametros por defecto (Figura \ref{fig:elipsoide}).
 
 \begin{figure}[h!]
     \centering
@@ -126,7 +126,7 @@ Para hacerlo, vaya al menú \emph{Radar, Geometric, Ellipsoid Correction, Averag
 
 Al proyectar la imagen sobre un modelo de elevación digital estaremos teniendo en cuenta la elevación del lugar al pasar al terreno desde la proyección del rango. Esto mejorara algunos aspectos de la imagen como el forshortening y el foreshadowinf.
 
-Para hacerlo, vaya al menú \emph{Radar, Geometric, Terrain Correction, Range Doppler Terrain Correction}. Seleccione la imagen \path{ALOS-P1_1__A-ORBIT__ALPSRP278916070_Cal_ML_Spk_DSk} y en \emph{processing parameters} destilde la opción \emph{Mask out areas without elevation} (Figuraa \ref{fig:gtc}).
+Para hacerlo, vaya al menú \menu{Radar>Geometric>Terrain Correction>Range Doppler Terrain Correction}. Seleccione la imagen \directory{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal\_ML\_Spk\_DSk} y en \menu{processing parameters} destilde la opción \emph{Mask out areas without elevation} (Figura \ref{fig:gtc}).
 
 \begin{figure}[h!]
     \centering
@@ -144,9 +144,9 @@ Para hacerlo, vaya al menú \emph{Radar, Geometric, Terrain Correction, Range Do
 
 \section{dB}
 
-Puede convertir la imagen a dB en cualquier momento haciendo click derecho sobre la banda y seleccionando la opción \emph{Linear to/from dB}.
+Puede convertir la imagen a dB en cualquier momento haciendo click derecho sobre la banda y seleccionando la opción \menu{Linear to/from dB}.
 
-Convierta a dB la banda \path{sigma_0_HH} y explore visualmente la imagen obtenida. Conviene siempre explorar las imagenes en dB pues es una medida más natural para nuestro ojo. Sin embargo, al momento de realizar procesamiento, conviene utilizar la imagen sin hacerlo.
+Convierta a dB la banda \directory{sigma\_0\_HH} y explore visualmente la imagen obtenida. Conviene siempre explorar las imagenes en dB pues es una medida más natural para nuestro ojo. Sin embargo, al momento de realizar procesamiento, conviene utilizar la imagen sin hacerlo.
 
 \section{Actividades}
 
