--- a/Nivel2-B/Documentos/Guia/guia.tex
+++ b/Nivel2-B/Documentos/Guia/guia.tex
@@ -6,13 +6,21 @@
 \title{{\large Nivel 2} \\ Introducción a la teledetección SAR}
 \author{Tomas Zajc \and Francisco Nemiña \and Laura Rouco}
 \begin{document}
+\frontmatter
 \maketitle
 \titlepage
 
+\input{prefacio.tex}
+
+\mainmatter
 \input{guia1.tex}
 \input{guia2.tex}
 \input{guia3.tex}
 \input{guia4.tex}
 \input{guia5.tex}
+\appendix
+\input{apendice1.tex}
+
+\backmatter
 
 \end{document}
