Correjimos un par de directorios.

--- a/Nivel2-B/Documentos/Guia/guia1.tex
+++ b/Nivel2-B/Documentos/Guia/guia1.tex
@@ -16,7 +16,7 @@ Descomprima los archivos decargados denominanados \directory{material.tar.gz}. A
 
 \section{Apertura de imágenes}
 
-En el menú principal, seleccione \menu{Open product...} y dentro de la carpeta \directory{material>raster\_data}, elija \directory{S2A\_USER\_MTD\_SAFL2A\_PDMC\_20161206.dim}.
+En el menú principal, seleccione \menu{Open product...} y dentro de la carpeta \directory{material/raster\_data}, elija \directory{S2A\_USER\_MTD\_SAFL2A\_PDMC\_20161206.dim}.
 
 Haga doble click sobre el nombre de la imágen y se desplegará, en el \menu{Producto Explorer} un árbol que incluye las siguientes opciones:
 \dirtree{%
@@ -105,7 +105,7 @@ Es posible exportar la visualización de la imagen completa o de una región esp
 
 \section{Actividad}
 
-Abra la imagen que se encuentra en la carpeta \directory{material>raster\_data>COSMO}. Abra la banda \directory{Sigma0\_VH}.
+Abra la imagen que se encuentra en la carpeta \directory{material/raster\_data>COSMO}. Abra la banda \path{Sigma0_VH}.
 
 \begin{que}
     ¿A qué coberturas pertenecen las regiones de la imagen con mayor nivel de brillo?
