--- a/Nivel2-B/Documentos/Guia/guia2.tex
+++ b/Nivel2-B/Documentos/Guia/guia2.tex
@@ -18,7 +18,7 @@ Para las imágenes radar hay 3 grandes grupos de interacciones posibles entre el
 Las imágenes adquiridas en \emph{Banda X} son las que tienen menor longitud de onda. Serán por lo tanto las que menos penetración tengan en la vegetación y las que más componente de backscatter presenten en suelos sin cobertura (Figura \ref{fig:interacciones}).
 
 
-Abra la imagen \directory{CSKS3\_GEC\_B\_S2\_03\_HH\_RD\_SF\_20141221211655\_20141221211703.h5} de la carpeta \directory{material>raster\_data>COSMO}. Despliege la banda \directory{Sigma\_HH\_db}.
+Abra la imagen \directory{CSKS3\_GEC\_B\_S2\_03\_HH\_RD\_SF\_20141221211655\_20141221211703.h5} de la carpeta \directory{material/raster\_data>COSMO}. Despliege la banda \path{Sigma_HH_db}.
 
 Observe guiandose con la imagen óptica:
 
@@ -38,7 +38,7 @@ Observe guiandose con la imagen óptica:
 
 Las imágenes adquiridas en \emph{Banda C} son las que tienen longitudes de onda intermedias. Tendrán por lo tanto menos reflectancia en los suelos sin coberturaa y nos permitiran extraer información sobre el scattering en volumnes (Figura \ref{fig:interacciones}).
 
-Abra la imagen \path{SENTINEL} de la carpeta \directory{material>raster\_data>SENTINEL1}. Despliege la banda \directory{Sigma\_HH\_db}.
+Abra la imagen \path{SENTINEL} de la carpeta \directory{material/raster\_data/SENTINEL1}. Despliege la banda \path{Sigma_HH_db}.
 
 Observe guiandose con la imagen óptica:
 
@@ -57,7 +57,7 @@ Observe guiandose con la imagen óptica:
 
 Las imágenes adquiridas en \emph{Banda L} son las que tienen mayor longitud de onda. Tendran en general interacciones especulares con los suelos sin cobertura, pero una buena longitud de penetración en la superficie. Además permitirán identificar propiedades de las coberturas vegetadas por debajo del canopeo (Figura \ref{fig:interacciones}).
 
-Abra la imagen \path{ALOS} de la carpeta \directory{material>raster\_data>ALOS}. Despliege la banda \directory{Sigma\_HH\_db}.
+Abra la imagen \path{ALOS} de la carpeta \directory{material/raster\_data/ALOS}. Despliege la banda \path{Sigma_HH_db}.
 
 
 Observe guiandose con la imagen óptica:
@@ -76,7 +76,7 @@ Observe guiandose con la imagen óptica:
 
 \section{Valores de $dB$}
 
-Es habitual expresar el valor del coeficiente de backscatter en dB para las imágenes SAR. Para calcularlo en distintos sectores de la imagen puede posicionarse sobre un píxel y observar en \menu{Pixel info} el valor de \directory{Sigma\_HH\_db} en dB.
+Es habitual expresar el valor del coeficiente de backscatter en dB para las imágenes SAR. Para calcularlo en distintos sectores de la imagen puede posicionarse sobre un píxel y observar en \menu{Pixel info} el valor de \path{Sigma_HH_db} en dB.
 
 Observe guiandose con la imagen óptica para la imagen \emph{COSMO}:
 
