--- a/Nivel2-B/Documentos/Guia/guia3.tex
+++ b/Nivel2-B/Documentos/Guia/guia3.tex
@@ -37,7 +37,7 @@ El producto descargado corresponde a una imagen \emph{Single look complex} en \e
 
 \section{Calibración}
 
-Abra la imagen \directory{ALPSRP278916070-L1.1.zip} que descargo del Alaska Satellite Facility. Despliegue la banda \directory{intensity\_HH} y observe que se encuentra comprimida horizontalmente.
+Abra la imagen \directory{ALPSRP278916070-L1.1.zip} que descargo del Alaska Satellite Facility. Despliegue la banda \path{intensity_HH} y observe que se encuentra comprimida horizontalmente.
 
 Para calibrar la imagen, dirijase al menu \menu{Radar>Radiometric>Calibrate} (Figura \ref{fig:calibrar}).
 
@@ -94,7 +94,7 @@ Seleccione en source la imagen \directory{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP2789160
 
 
 \begin{que}
-    Observe y compare la banda \directory{sigma\_0\_HH} de la imagen filtrada con la imagen multilookeada.
+    Observe y compare la banda \path{sigma_0_HH} de la imagen filtrada con la imagen multilookeada.
 \end{que}
 
 \section{Proyección}
@@ -146,7 +146,7 @@ Para hacerlo, vaya al menú \menu{Radar>Geometric>Terrain Correction>Range Doppl
 
 Puede convertir la imagen a dB en cualquier momento haciendo click derecho sobre la banda y seleccionando la opción \menu{Linear to/from dB}.
 
-Convierta a dB la banda \directory{sigma\_0\_HH} y explore visualmente la imagen obtenida. Conviene siempre explorar las imagenes en dB pues es una medida más natural para nuestro ojo. Sin embargo, al momento de realizar procesamiento, conviene utilizar la imagen sin hacerlo.
+Convierta a dB la banda \path{sigma_0_HH} y explore visualmente la imagen obtenida. Conviene siempre explorar las imagenes en dB pues es una medida más natural para nuestro ojo. Sin embargo, al momento de realizar procesamiento, conviene utilizar la imagen sin hacerlo.
 
 \section{Actividades}
 
